--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,5 +2,6 @@
 
 export("%>%")
 export(clean_matrix_colnames)
+export(construct_matrix_dds)
 export(read_featureCounts_matrix)
 importFrom(magrittr,"%>%")
