Add plot counts of detected genes each library

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,5 +7,6 @@ export(count_experiment_detected_genes)
 export(count_library_detected_genes)
 export(count_samples_each_condition)
 export(get_design_covariates)
+export(plot_detected_genes)
 export(read_featureCounts_matrix)
 importFrom(magrittr,"%>%")
