--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Suggests: 
     testthat (>= 3.0.0),
+    vdiffr,
     withr
 Config/testthat/edition: 3
 Imports: 
@@ -18,6 +19,7 @@ Imports:
     cli,
     DESeq2,
     dplyr,
+    ggplot2,
     magrittr,
     purrr,
     stringr,
