Add extract summary data from results

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(construct_matrix_dds)
 export(count_experiment_detected_genes)
 export(count_library_detected_genes)
 export(count_samples_each_condition)
+export(extract_results_summary_data)
+export(extract_shrunken_results)
 export(get_design_covariates)
 export(plot_detected_genes)
 export(read_featureCounts_matrix)
