--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,7 @@ Suggests:
     withr
 Config/testthat/edition: 3
 Imports: 
+    apeglm,
     BiocGenerics,
     cli,
     DESeq2,
@@ -22,6 +23,7 @@ Imports:
     ggplot2,
     magrittr,
     purrr,
+    S4Vectors,
     stringr,
     SummarizedExperiment,
     tibble
