Add plot results summary

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,5 +10,6 @@ export(extract_results_summary_data)
 export(extract_shrunken_results)
 export(get_design_covariates)
 export(plot_detected_genes)
+export(plot_results_summary)
 export(read_featureCounts_matrix)
 importFrom(magrittr,"%>%")
