--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(count_samples_each_condition)
 export(extract_results_summary_data)
 export(extract_shrunken_results)
 export(get_design_covariates)
+export(get_prcomp)
 export(perform_pca)
 export(plot_detected_genes)
 export(plot_results_summary)
