Add variance explained to PCA data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(extract_results_summary_data)
 export(extract_shrunken_results)
 export(get_design_covariates)
 export(get_prcomp)
+export(get_variance_explained)
 export(perform_pca)
 export(plot_detected_genes)
 export(plot_results_summary)
