Add plot scree plot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,5 +14,6 @@ export(get_variance_explained)
 export(perform_pca)
 export(plot_detected_genes)
 export(plot_results_summary)
+export(plot_scree)
 export(read_featureCounts_matrix)
 importFrom(magrittr,"%>%")
