--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(get_design_covariates)
 export(get_prcomp)
 export(get_variance_explained)
 export(perform_pca)
+export(plot_biplot)
 export(plot_detected_genes)
 export(plot_results_summary)
 export(plot_scree)
