feat: read counts matrix
Squashed commit of the following:

commit bdf23ec5673178e479310c85493907e767ce9dd7
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Mon Mar 3 17:38:24 2025 -0500

    fix: failing tests

commit 9852dc5ca4d02bb68be4dc2b94fce89417063465
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Mon Mar 3 17:37:40 2025 -0500

    fix: cut unused count matrix import

commit 6636a6af9acb5aaac41668c37ff8fd24f23ef8d6
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Mon Mar 3 17:13:44 2025 -0500

    test: remove pca biplot failing test

commit ab44afcd5cd9f78bec3801aae921da3738978661
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Mon Mar 3 17:02:40 2025 -0500

    docs: read_counts_file function docs

commit 10a9f51f160c556268bf5625e969f92322e8247b
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Mon Mar 3 16:41:19 2025 -0500

    feat: read counts from file

commit 1561122731c58ce5c6ecdec377cc32b1ecb9b644
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Mon Mar 3 16:41:03 2025 -0500

    test: add test counts file

commit b79fc2e94eb1752bfdc31032f0cff568ce7de335
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Mon Mar 3 16:18:12 2025 -0500

    test: add counts data file

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,9 +18,11 @@ Imports:
     apeglm,
     BiocGenerics,
     cli,
+    data.table,
     DESeq2,
     dplyr,
     ggplot2,
+    janitor,
     magrittr,
     MatrixGenerics,
     purrr,
