--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,12 +9,7 @@ export(count_samples_each_condition)
 export(extract_results_summary_data)
 export(extract_shrunken_results)
 export(get_design_covariates)
-export(get_prcomp)
-export(get_variance_explained)
-export(perform_pca)
-export(plot_biplot)
 export(plot_detected_genes)
 export(plot_results_summary)
-export(plot_scree)
-export(read_featureCounts_matrix)
+export(read_counts_file)
 importFrom(magrittr,"%>%")
