feat: write SummarizedExperiment to .rds file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,4 +12,5 @@ export(get_design_covariates)
 export(plot_detected_genes)
 export(plot_results_summary)
 export(read_counts_file)
+export(write_se)
 importFrom(magrittr,"%>%")
