--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,6 +22,7 @@ Imports:
     DESeq2,
     dplyr,
     ggplot2,
+    glue,
     janitor,
     magrittr,
     MatrixGenerics,
@@ -31,4 +32,5 @@ Imports:
     scales,
     stringr,
     SummarizedExperiment,
-    tibble
+    tibble,
+    tidyselect
