feat: write SummarizedExperiment to .rds file
Squashed commit of the following:

commit d92becf9219ba275bb7bf2bc2032a24849388ac9
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Fri Mar 14 17:25:32 2025 -0400

    docs: document write_se

commit 68c0b72ae30b29eb62d181d4c6f89668c92dbd75
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Fri Mar 14 17:23:34 2025 -0400

    feat: create directory in function that mimics `mkdir -p`

commit f2aee72694b5f99877b07076bc304077b7741d8c
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Fri Mar 14 17:13:51 2025 -0400

    feat: create nonexistent directory when writing SummarizedExperiment

commit 8cef912742bb8e6d473c48ae0b2e64e42a8eca69
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Fri Mar 14 17:00:07 2025 -0400

    refactor: warn no overwrite to io utils

commit e280b8ed929b84e2ea33170a7a94d7f332524615
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Fri Mar 14 16:47:17 2025 -0400

    feat: write SummarizedExperiment to .rds file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(count_samples_each_condition)
 export(extract_results_summary_data)
 export(extract_shrunken_results)
 export(get_design_covariates)
+export(mkdir_p)
 export(plot_detected_genes)
 export(plot_results_summary)
 export(read_counts_file)
