--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,7 @@
 
 export("%>%")
 export(clean_matrix_colnames)
-export(construct_matrix_dds)
+export(construct_se)
 export(count_experiment_detected_genes)
 export(count_library_detected_genes)
 export(count_samples_each_condition)
