feat: analyze library sizes

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,11 +21,14 @@ Imports:
     data.table,
     DESeq2,
     dplyr,
+    DT,
+    edgeR,
     ggplot2,
     glue,
     janitor,
     magrittr,
     MatrixGenerics,
+    plotly,
     purrr,
     rlang,
     S4Vectors,
