feat: descriptive stats sample data plots and tables
Squashed commit of the following:

commit 224c8bad5f7797a700d368586f8f5012893a7243
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Fri Mar 21 17:32:37 2025 -0400

    fix: undefined global functions

commit 96b33808615aa180fb708efdf3aa788f11c25db3
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Fri Mar 21 17:28:21 2025 -0400

    docs: plot canonical correlations

commit fc8735bcbcb7b7690333cadea076cfbd3255d3ff
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Fri Mar 21 17:23:37 2025 -0400

    feat: plot canonical correlations

commit f300b1592ae2822c3b22361bdb38378913119648
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Fri Mar 21 14:59:28 2025 -0400

    docs: all modeling variables pairs plot

commit 504c523a5bf5ba8f12ba3510f0b929d8325be216
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Fri Mar 21 14:55:35 2025 -0400

    fix: throw error if no modeling variables for all modeling variables pairs plot

commit 08d500b34762a862a87706453fd3df6f07347250
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Fri Mar 21 14:48:55 2025 -0400

    feat: make pairs plot for all modeling variables

commit df4b17d20bdb7674fe861c3cc4b9afb51a5bf3b7
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Fri Mar 21 14:43:34 2025 -0400

    test: make reproducible test of all modeling variables pairs plot

commit f7c9acd32f2c3d255f071c1d3b5c17448264b903
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Fri Mar 21 14:23:20 2025 -0400

    test: pairs plot of all modeling variables

commit c987fd9b7dc7dc47a6ffda26de53ae73f568a59f
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Fri Mar 21 11:43:07 2025 -0400

    feat: get all and explanatory modeling variables

commit 56a949aee3c67ba8ed7c4978222ef39203f0b044
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Fri Mar 21 10:55:54 2025 -0400

    docs: get modeling variable

commit 099a13bee32c707afccf

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,11 +18,13 @@ Imports:
     apeglm,
     BiocGenerics,
     cli,
+    ComplexHeatmap,
     data.table,
     DESeq2,
     dplyr,
     DT,
     edgeR,
+    GGally,
     ggplot2,
     glue,
     janitor,
@@ -36,4 +38,5 @@ Imports:
     stringr,
     SummarizedExperiment,
     tibble,
-    tidyselect
+    tidyselect,
+    variancePartition
