feat: principal components analysis

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 export("%>%")
 export(abort_no_modeling_variables)
 export(add_library_size)
-export(clean_matrix_colnames)
 export(construct_se)
 export(count_experiment_detected_genes)
 export(count_library_detected_genes)
@@ -16,13 +15,17 @@ export(get_modeling_explanatory_variables)
 export(get_modeling_variable)
 export(get_samples_data)
 export(mkdir_p)
+export(perform_pca)
 export(plot_canonical_correlation)
 export(plot_detected_genes)
 export(plot_library_sizes)
 export(plot_logcpm_density)
 export(plot_modeling_variables_pairs)
 export(plot_results_summary)
+export(plot_scores)
+export(plot_scree)
 export(read_counts_file)
+export(set_aesthetics)
 export(set_modeling_variable)
 export(tbl_interest_variables_freq)
 export(tbl_library_sizes)
