feat: plot correlation and distance heatmaps
Squashed commit of the following:

commit 2978aa3ebaca3f885850ab34c8d0df9db00c7d88
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Fri Mar 28 17:07:52 2025 -0400

    chore: update renv lock

commit eb7c535bdfa97c070eccce9131d963b6902d14f3
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Fri Mar 28 17:05:41 2025 -0400

    docs: plot distance heatmap

commit e25d616c7f5848e86396e6b7904891bf11ebdf65
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Fri Mar 28 17:02:39 2025 -0400

    feat: plot distance heatmaps

commit 5435d54f015c813b2f05f3b16b1a881d594e038f
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Fri Mar 28 16:35:47 2025 -0400

    docs: plot correlation heatmap

commit a4bfee893e4163e4390c78a740bf5730145540f7
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Fri Mar 28 16:17:04 2025 -0400

    feat: plot correlation heatmap

commit 219b50c65f1c1688c9227142b44ca9bdbf2c72f4
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Thu Mar 27 16:09:10 2025 -0400

    feat: set pca scores plot aesthetics from metadata

commit ef7205f720254ceba25eac9d3fabb7004a6c7763
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Thu Mar 27 15:38:51 2025 -0400

    feat: set aesthetic in SummarizedExperiment

commit f33027a088f470b71030231bfbf0a088b8c86bc9
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Thu Mar 27 14:48:56 2025 -0400

    feat: PCA object inherits SummarizedExperiment metadata

commit 085a202a49b9745be7ca974f5a5e32ea66852cd9
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Mon Mar 24 16:19:21 2025 -0400

    feat: percent variance explained labels to PCA scores plots

commit e558ff4a5e6ebff12a2388b9bd7cf8e89e440a01
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Mon Mar 24 16:05:21 2025 -0400

    feat: plot PCA scores

commit a08388bfbafaba261ae775ccbe28a87708a71252
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Mon Mar 

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,7 +17,9 @@ export(get_samples_data)
 export(mkdir_p)
 export(perform_pca)
 export(plot_canonical_correlation)
+export(plot_cor_heatmap)
 export(plot_detected_genes)
+export(plot_dist_heatmap)
 export(plot_library_sizes)
 export(plot_logcpm_density)
 export(plot_modeling_variables_pairs)
@@ -25,6 +27,7 @@ export(plot_results_summary)
 export(plot_scores)
 export(plot_scree)
 export(read_counts_file)
+export(remove_diagonal)
 export(set_aesthetics)
 export(set_modeling_variable)
 export(tbl_interest_variables_freq)
