--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,8 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 biocViews:
 Suggests: 
+    devtools,
+    diffviewer,
     testthat (>= 3.0.0),
     vdiffr,
     withr
