feat: cache with Hmisc::runifChanged

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(plot_scores)
 export(plot_scree)
 export(read_counts_file)
 export(remove_diagonal)
+export(run_if_changed)
 export(set_aesthetics)
 export(set_formula)
 export(set_modeling_variable)
