fix: development dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 .Rproj.user
 .Rhistory
+
+# use DESCRIPTION file for single source of dependencies
+# renv is only used for environment isolation
+renv.lock
+
