--- a/renv/settings.json
+++ b/renv/settings.json
@@ -1,5 +1,5 @@
 {
-  "bioconductor.version": "3.18",
+  "bioconductor.version": null,
   "external.libraries": [],
   "ignored.packages": [],
   "package.dependency.fields": [
@@ -10,7 +10,7 @@
   "ppm.enabled": null,
   "ppm.ignored.urls": [],
   "r.version": null,
-  "snapshot.type": "implicit",
+  "snapshot.type": "explicit",
   "use.cache": true,
   "vcs.ignore.cellar": true,
   "vcs.ignore.library": true,
