feat: get contrasts w/ names from test specs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(count_samples_each_condition)
 export(extract_results_summary_data)
 export(extract_shrunken_results)
 export(get_alpha)
+export(get_contrasts)
 export(get_design_covariates)
 export(get_formula)
 export(get_lfc_threshold)
