feat: get contrasts table from test specs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(extract_results_summary_data)
 export(extract_shrunken_results)
 export(get_alpha)
 export(get_contrasts)
+export(get_contrasts_table)
 export(get_design_covariates)
 export(get_formula)
 export(get_lfc_threshold)
