--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(get_modeling_all_variables)
 export(get_modeling_explanatory_variables)
 export(get_modeling_variable)
 export(get_samples_data)
+export(get_tests_table)
 export(mkdir_p)
 export(perform_pca)
 export(perform_variance_partition_analysis)
