feat: sample exclusions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(construct_se)
 export(count_experiment_detected_genes)
 export(count_library_detected_genes)
 export(count_samples_each_condition)
+export(drop_excluded_samples)
 export(extract_results_summary_data)
 export(extract_shrunken_results)
 export(get_alpha)
@@ -31,6 +32,7 @@ export(plot_library_sizes)
 export(plot_logcpm_density)
 export(plot_modeling_variables_pairs)
 export(plot_results_summary)
+export(plot_sample_exclusions_heatmap)
 export(plot_scores)
 export(plot_scree)
 export(read_counts_file)
